# sqlalchemy-excel

./: AGENTS.md  ARCH.md  CHANGELOG.md  PRD.md  README.md  TDD.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  roadmap_task.yml
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: GROWTH_ROADMAP_2026.md  release-checklist.md  security-defaults-checklist.md
docs/tutorials/: backend-upload-pipeline-10min.md
examples/fastapi_upload/: app.py  models.py
src/sqlalchemy_excel/: __init__.py  _compat.py  _types.py  cli.py  exceptions.py  export.py  mapping.py  template.py
src/sqlalchemy_excel/excelio/: __init__.py  session.py
src/sqlalchemy_excel/integrations/: __init__.py  fastapi.py
src/sqlalchemy_excel/load/: __init__.py  importer.py  strategies.py
src/sqlalchemy_excel/reader/: __init__.py  base.py  excel_dbapi_reader.py  openpyxl_reader.py
src/sqlalchemy_excel/validation/: __init__.py  engine.py  pydantic_backend.py  report.py
tests/: __init__.py  conftest.py
tests/integration/: test_end_to_end.py  test_fastapi_router.py
tests/unit/: test_excel_dbapi_contract.py  test_export.py  test_importer.py  test_mapping.py  test_reader.py  test_report.py  test_template.py  test_validation.py
